Fix linter/formatter errors in framework, infrastructure and direct access code (#45)

--- a/.pylintrc
+++ b/.pylintrc
@@ -73,6 +73,8 @@ disable=
     docstring-first-line-empty, # relax docstring style
     import-outside-toplevel,
     unnecessary-lambda-assignment,
+    no-name-in-module,
+    useless-parent-delegation,
     assigning-non-slot  # https://github.com/Qiskit/qiskit-terra/pull/7347#issuecomment-985007311
 
 
